--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "75fa9820",
    "metadata": {},
    "outputs": [
@@ -37,17 +37,357 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Resilient resource allocations for multi-stage...</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>J Li et al.</td>\n",
+       "      <td>ieeexplore.ieee.org</td>\n",
+       "      <td>disaster, Energy storage, Multistage</td>\n",
+       "      <td></td>\n",
+       "      <td>https://ieeexplore.ieee.org/abstract/document/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Coordinated robust configuration of soft open ...</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>W Ma et al.</td>\n",
+       "      <td>Elsevier</td>\n",
+       "      <td>disaster, Energy storage, Multistage</td>\n",
+       "      <td></td>\n",
+       "      <td>https://www.sciencedirect.com/science/article/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A Multi-Stage Collaborative Optimization Opera...</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>H Xu et al.</td>\n",
+       "      <td>ieeexplore.ieee.org</td>\n",
+       "      <td>disaster, Energy storage, Multistage</td>\n",
+       "      <td></td>\n",
+       "      <td>https://ieeexplore.ieee.org/abstract/document/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>A novel robust energy storage planning method ...</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>H Yang et al.</td>\n",
+       "      <td>ieeexplore.ieee.org</td>\n",
+       "      <td>disaster, Energy storage, Multistage</td>\n",
+       "      <td></td>\n",
+       "      <td>https://ieeexplore.ieee.org/abstract/document/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Multi-stage expansion planning of energy stora...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>P Li et al.</td>\n",
+       "      <td>Springer</td>\n",
+       "      <td>disaster, Energy storage, Multistage</td>\n",
+       "      <td></td>\n",
+       "      <td>https://link.springer.com/article/10.1186/s416...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>A multi-stage coordinated resilience enhanceme...</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>W Tang et al.</td>\n",
+       "      <td>Elsevier</td>\n",
+       "      <td>disaster, Energy storage, Multistage</td>\n",
+       "      <td></td>\n",
+       "      <td>https://www.sciencedirect.com/science/article/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Enhancing resilience and sustainability of dis...</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>H Saboori</td>\n",
+       "      <td>Elsevier</td>\n",
+       "      <td>disaster, Energy storage, Multistage</td>\n",
+       "      <td></td>\n",
+       "      <td>https://www.sciencedirect.com/science/article/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Power System Transition Planning: An Industry-...</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>A A</td>\n",
+       "      <td>arxiv.org</td>\n",
+       "      <td>disaster, Energy storage, SDDP</td>\n",
+       "      <td></td>\n",
+       "      <td>https://arxiv.org/abs/2505.01331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>On the Applications of Stochastic Dual Dynamic...</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>BK SERANILLA</td>\n",
+       "      <td>orbilu.uni.lu</td>\n",
+       "      <td>disaster, Energy storage, SDDP</td>\n",
+       "      <td></td>\n",
+       "      <td>https://orbilu.uni.lu/handle/10993/58728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Multistage operation for distributed solar and...</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Y Li et al.</td>\n",
+       "      <td>ieeexplore.ieee.org</td>\n",
+       "      <td>disaster, Energy storage, SDDP</td>\n",
+       "      <td></td>\n",
+       "      <td>https://ieeexplore.ieee.org/abstract/document/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Optimizing vaccine distribution in developing ...</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>BK Seranilla &amp; N Löhndorf</td>\n",
+       "      <td>Wiley Online Library</td>\n",
+       "      <td>disaster, Energy storage, SDDP</td>\n",
+       "      <td></td>\n",
+       "      <td>https://onlinelibrary.wiley.com/doi/abs/10.100...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>State-of-the-art review on energy sharing and ...</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>A Kumar et al.</td>\n",
+       "      <td>cell.com</td>\n",
+       "      <td>disaster, Energy storage, SDDP</td>\n",
+       "      <td></td>\n",
+       "      <td>https://www.cell.com/iscience/fulltext/S2589-0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A multi-horizon stochastic programming model f...</td>\n",
+       "      <td>2026</td>\n",
+       "      <td>SY Chen &amp; Y Song</td>\n",
+       "      <td>Springer</td>\n",
+       "      <td>disaster, Multistage, SDDP, rolling horizon</td>\n",
+       "      <td></td>\n",
+       "      <td>https://link.springer.com/article/10.1007/s102...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Markov Chain–Based Policies for Multistage Sto...</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>M Castro &amp; M Bodur &amp; Y Song</td>\n",
+       "      <td>pubsonline.informs.org</td>\n",
+       "      <td>disaster, Multistage, SDDP, rolling horizon</td>\n",
+       "      <td></td>\n",
+       "      <td>https://pubsonline.informs.org/doi/abs/10.1287...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Multi-Stage Stochastic Programming for Disaste...</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>S Bhattarai</td>\n",
+       "      <td>search.proquest.com</td>\n",
+       "      <td>disaster, Multistage, SDDP, rolling horizon</td>\n",
+       "      <td></td>\n",
+       "      <td>https://search.proquest.com/openview/02b551e16...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Multi-stage stochastic programming methods for...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>M Siddig &amp; Y Song</td>\n",
+       "      <td>arxiv.org</td>\n",
+       "      <td>disaster, Multistage, SDDP, rolling horizon</td>\n",
+       "      <td></td>\n",
+       "      <td>https://arxiv.org/abs/2201.10678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Multi-objective rolling horizon personnel rout...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>İ TARHAN et al.</td>\n",
+       "      <td>papers.ssrn.com</td>\n",
+       "      <td>disaster, Multistage, SDDP, rolling horizon</td>\n",
+       "      <td></td>\n",
+       "      <td>https://papers.ssrn.com/sol3/papers.cfm?abstra...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Resilience enhancement for distribution system...</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>H Xiong et al.</td>\n",
+       "      <td>ieeexplore.ieee.org</td>\n",
+       "      <td>disaster, Multistage, SDDP, rolling horizon</td>\n",
+       "      <td></td>\n",
+       "      <td>https://ieeexplore.ieee.org/abstract/document/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Coordinating International Humanitarian Invent...</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>P Guo &amp; J Zhu</td>\n",
+       "      <td>Wiley Online Library</td>\n",
+       "      <td>disaster, Multistage, SDDP, rolling horizon</td>\n",
+       "      <td></td>\n",
+       "      <td>https://onlinelibrary.wiley.com/doi/abs/10.100...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A Multi Stage DRO-SDDP Approach for Planning M...</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>J Feng et al.</td>\n",
+       "      <td>ieeexplore.ieee.org</td>\n",
+       "      <td>disaster, Energy storage, Multistage, SDDP, ro...</td>\n",
+       "      <td></td>\n",
+       "      <td>https://ieeexplore.ieee.org/abstract/document/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A Stochastic Dual Dynamic Programming Approach...</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>RA Akinwonmi</td>\n",
+       "      <td>search.proquest.com</td>\n",
+       "      <td>disaster, Energy storage, Multistage, SDDP, ro...</td>\n",
+       "      <td></td>\n",
+       "      <td>https://search.proquest.com/openview/fd8d97d32...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Using stochastic dual dynamic programming to s...</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>A Tabares &amp; P Cortés</td>\n",
+       "      <td>mdpi.com</td>\n",
+       "      <td>disaster, Energy storage, Multistage, SDDP, ro...</td>\n",
+       "      <td></td>\n",
+       "      <td>https://www.mdpi.com/1996-1073/17/11/2628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dual stochastic dual dynamic programming for m...</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>X Zhang et al.</td>\n",
+       "      <td>ieeexplore.ieee.org</td>\n",
+       "      <td>disaster, Energy storage, Multistage, SDDP, ro...</td>\n",
+       "      <td></td>\n",
+       "      <td>https://ieeexplore.ieee.org/abstract/document/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>A multi-horizon stochastic programming model f...</td>\n",
+       "      <td>2026</td>\n",
+       "      <td>SY Chen &amp; Y Song</td>\n",
+       "      <td>Springer</td>\n",
+       "      <td>disaster, Energy storage, Multistage, SDDP, ro...</td>\n",
+       "      <td></td>\n",
+       "      <td>https://link.springer.com/article/10.1007/s102...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [name, year, authors, journal, categories, key ideas, link]\n",
-       "Index: []"
+       "                                                name  year  \\\n",
+       "1  Resilient resource allocations for multi-stage...  2024   \n",
+       "3  Coordinated robust configuration of soft open ...  2025   \n",
+       "4  A Multi-Stage Collaborative Optimization Opera...  2024   \n",
+       "5  A novel robust energy storage planning method ...  2025   \n",
+       "6  Multi-stage expansion planning of energy stora...  2022   \n",
+       "7  A multi-stage coordinated resilience enhanceme...  2025   \n",
+       "8  Enhancing resilience and sustainability of dis...  2023   \n",
+       "1  Power System Transition Planning: An Industry-...  2025   \n",
+       "2  On the Applications of Stochastic Dual Dynamic...  2023   \n",
+       "5  Multistage operation for distributed solar and...  2023   \n",
+       "6  Optimizing vaccine distribution in developing ...  2024   \n",
+       "7  State-of-the-art review on energy sharing and ...  2024   \n",
+       "0  A multi-horizon stochastic programming model f...  2026   \n",
+       "1  Markov Chain–Based Policies for Multistage Sto...  2025   \n",
+       "3  Multi-Stage Stochastic Programming for Disaste...  2025   \n",
+       "4  Multi-stage stochastic programming methods for...  2022   \n",
+       "5  Multi-objective rolling horizon personnel rout...  2022   \n",
+       "7  Resilience enhancement for distribution system...  2024   \n",
+       "9  Coordinating International Humanitarian Invent...  2025   \n",
+       "1  A Multi Stage DRO-SDDP Approach for Planning M...  2025   \n",
+       "2  A Stochastic Dual Dynamic Programming Approach...  2024   \n",
+       "3  Using stochastic dual dynamic programming to s...  2024   \n",
+       "4  Dual stochastic dual dynamic programming for m...  2023   \n",
+       "6  A multi-horizon stochastic programming model f...  2026   \n",
+       "\n",
+       "                       authors                  journal  \\\n",
+       "1                  J Li et al.      ieeexplore.ieee.org   \n",
+       "3                  W Ma et al.                 Elsevier   \n",
+       "4                  H Xu et al.      ieeexplore.ieee.org   \n",
+       "5                H Yang et al.      ieeexplore.ieee.org   \n",
+       "6                  P Li et al.                 Springer   \n",
+       "7                W Tang et al.                 Elsevier   \n",
+       "8                    H Saboori                 Elsevier   \n",
+       "1                          A A                arxiv.org   \n",
+       "2                 BK SERANILLA            orbilu.uni.lu   \n",
+       "5                  Y Li et al.      ieeexplore.ieee.org   \n",
+       "6    BK Seranilla & N Löhndorf     Wiley Online Library   \n",
+       "7               A Kumar et al.                 cell.com   \n",
+       "0             SY Chen & Y Song                 Springer   \n",
+       "1  M Castro & M Bodur & Y Song   pubsonline.informs.org   \n",
+       "3                  S Bhattarai      search.proquest.com   \n",
+       "4            M Siddig & Y Song                arxiv.org   \n",
+       "5              İ TARHAN et al.          papers.ssrn.com   \n",
+       "7               H Xiong et al.      ieeexplore.ieee.org   \n",
+       "9                P Guo & J Zhu     Wiley Online Library   \n",
+       "1                J Feng et al.      ieeexplore.ieee.org   \n",
+       "2                 RA Akinwonmi      search.proquest.com   \n",
+       "3         A Tabares & P Cortés                 mdpi.com   \n",
+       "4               X Zhang et al.      ieeexplore.ieee.org   \n",
+       "6             SY Chen & Y Song                 Springer   \n",
+       "\n",
+       "                                          categories key ideas  \\\n",
+       "1               disaster, Energy storage, Multistage             \n",
+       "3               disaster, Energy storage, Multistage             \n",
+       "4               disaster, Energy storage, Multistage             \n",
+       "5               disaster, Energy storage, Multistage             \n",
+       "6               disaster, Energy storage, Multistage             \n",
+       "7               disaster, Energy storage, Multistage             \n",
+       "8               disaster, Energy storage, Multistage             \n",
+       "1                     disaster, Energy storage, SDDP             \n",
+       "2                     disaster, Energy storage, SDDP             \n",
+       "5                     disaster, Energy storage, SDDP             \n",
+       "6                     disaster, Energy storage, SDDP             \n",
+       "7                     disaster, Energy storage, SDDP             \n",
+       "0        disaster, Multistage, SDDP, rolling horizon             \n",
+       "1        disaster, Multistage, SDDP, rolling horizon             \n",
+       "3        disaster, Multistage, SDDP, rolling horizon             \n",
+       "4        disaster, Multistage, SDDP, rolling horizon             \n",
+       "5        disaster, Multistage, SDDP, rolling horizon             \n",
+       "7        disaster, Multistage, SDDP, rolling horizon             \n",
+       "9        disaster, Multistage, SDDP, rolling horizon             \n",
+       "1  disaster, Energy storage, Multistage, SDDP, ro...             \n",
+       "2  disaster, Energy storage, Multistage, SDDP, ro...             \n",
+       "3  disaster, Energy storage, Multistage, SDDP, ro...             \n",
+       "4  disaster, Energy storage, Multistage, SDDP, ro...             \n",
+       "6  disaster, Energy storage, Multistage, SDDP, ro...             \n",
+       "\n",
+       "                                                link  \n",
+       "1  https://ieeexplore.ieee.org/abstract/document/...  \n",
+       "3  https://www.sciencedirect.com/science/article/...  \n",
+       "4  https://ieeexplore.ieee.org/abstract/document/...  \n",
+       "5  https://ieeexplore.ieee.org/abstract/document/...  \n",
+       "6  https://link.springer.com/article/10.1186/s416...  \n",
+       "7  https://www.sciencedirect.com/science/article/...  \n",
+       "8  https://www.sciencedirect.com/science/article/...  \n",
+       "1                   https://arxiv.org/abs/2505.01331  \n",
+       "2           https://orbilu.uni.lu/handle/10993/58728  \n",
+       "5  https://ieeexplore.ieee.org/abstract/document/...  \n",
+       "6  https://onlinelibrary.wiley.com/doi/abs/10.100...  \n",
+       "7  https://www.cell.com/iscience/fulltext/S2589-0...  \n",
+       "0  https://link.springer.com/article/10.1007/s102...  \n",
+       "1  https://pubsonline.informs.org/doi/abs/10.1287...  \n",
+       "3  https://search.proquest.com/openview/02b551e16...  \n",
+       "4                   https://arxiv.org/abs/2201.10678  \n",
+       "5  https://papers.ssrn.com/sol3/papers.cfm?abstra...  \n",
+       "7  https://ieeexplore.ieee.org/abstract/document/...  \n",
+       "9  https://onlinelibrary.wiley.com/doi/abs/10.100...  \n",
+       "1  https://ieeexplore.ieee.org/abstract/document/...  \n",
+       "2  https://search.proquest.com/openview/fd8d97d32...  \n",
+       "3          https://www.mdpi.com/1996-1073/17/11/2628  \n",
+       "4  https://ieeexplore.ieee.org/abstract/document/...  \n",
+       "6  https://link.springer.com/article/10.1007/s102...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +1112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lit-review",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -786,7 +1126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
